Closed Bug 1294732 Opened 8 years ago Closed 8 years ago

Backout the patches from bug 1271165 once the instrumentation has served its purpose.

Categories

(Core :: Memory Allocator, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox50 --- unaffected
firefox51 + fixed

People

(Reporter: ehoogeveen, Assigned: ehoogeveen)

References

Details

Attachments

(1 file)

The patches in bug 1271165 are landing without review as a temporary measure to diagnose a crash (bug 1124397). Once that purpose has been served, I'll back them out again in this bug.

The crashes aren't very frequent, so we'll probably need to leave the instrumentation in for at least a week or so to see if anything turns up, but I'll make sure they're backed out before we branch.
[Tracking Requested - why for this release]:

We can track for 51 as a reminder to back out bug 1271165 before Aurora merge day.
Priority: -- → P1
Tracking 51+ for all the reasons in Comment 1.
This is a simple backout, with two exceptions:
1) it leaves in the trailing whitespace removal for mozjemalloc and
2) it leaves in two fixes for harmless typos that I came across while writing the glue code (s/MALLOC_FUNS/MALLOC_FUNCS/ for two places that include malloc_decls.h).
Attachment #8784005 - Flags: review?(mh+mozilla)
Attachment #8784005 - Flags: review?(mh+mozilla) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ab461807ca14
Back out all of bug 1271165 as it has served its purpose. r=glandium
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/ab461807ca14
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: