Bug 1294732 - Back out all of bug 1271165 as it has served its purpose. r=glandium