memory/build/replace_malloc.c
@@ -114,11 +114,6 @@ replace_malloc_init_funcs()
 #include "malloc_decls.h"
 
 #define MALLOC_DECL(name, return_type, ...) \
-  MFBT_API return_type name ## _impl(__VA_ARGS__);
-#define MALLOC_FUNCS MALLOC_FUNCS_EXTRA
-#include "malloc_decls.h"
-
-#define MALLOC_DECL(name, return_type, ...) \
   MOZ_JEMALLOC_API return_type name ## _impl(__VA_ARGS__);
 #define MALLOC_FUNCS MALLOC_FUNCS_JEMALLOC
 #include "malloc_decls.h"
@@ -226,28 +221,6 @@ valloc_impl(size_t size)
   if (MOZ_LIKELY(!replace_valloc))
     return je_valloc(size);
   return replace_valloc(size);
-}
-
-void
-malloc_protect_impl(void* ptr, uint32_t* id)
-{
-  if (MOZ_UNLIKELY(!replace_malloc_initialized))
-    init();
-  if (MOZ_LIKELY(!replace_malloc_protect))
-    je_malloc_protect(ptr, id);
-  else
-    replace_malloc_protect(ptr, id);
-}
-
-void
-malloc_unprotect_impl(void* ptr, uint32_t* id)
-{
-  if (MOZ_UNLIKELY(!replace_malloc_initialized))
-    init();
-  if (MOZ_LIKELY(!replace_malloc_unprotect))
-    je_malloc_unprotect(ptr, id);
-  else
-    replace_malloc_unprotect(ptr, id);
 }
 
 size_t
